--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "nanoid": "^4.0.0",
     "react": "18.1.0",
     "react-native": "0.70.6",
+    "react-native-device-info": "^10.3.0",
     "react-native-gesture-handler": "^2.9.0",
+    "react-native-get-random-values": "^1.8.0",
     "react-native-material-ripple": "^0.9.1",
     "react-native-reanimated": "^2.14.1",
     "react-native-safe-area-context": "^4.4.1",
